welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
	var G = new Array[Int(num)]
	for (k <- 1 to num) {
	var t:Int =k
	while (1<2) {t=t+1}
		
	}
	return 1
}
